icicle config imeplemnted byut not working