@@ -2,6 +2,7 @@ package com.github.thedeathlycow.frostiful.config;
 
 import com.github.thedeathlycow.frostiful.config.group.IcicleConfigGroup;
 import com.github.thedeathlycow.frostiful.init.Frostiful;
+import com.google.common.collect.ImmutableList;
 import com.oroarmor.config.Config;
 import com.oroarmor.config.ConfigItemGroup;
 import net.fabricmc.loader.api.FabricLoader;
@@ -13,7 +14,7 @@ public class FrostifulConfig extends Config {
 
     public static final ConfigItemGroup icicleConfigGroup = new IcicleConfigGroup();
 
-    public static final List<ConfigItemGroup> configs = List.of(icicleConfigGroup);
+    public static final List<ConfigItemGroup> configs = ImmutableList.of(icicleConfigGroup);
 
     /**
      * Creates a new config
